Adds other features to artist data

--- a/Q4.ipynb
+++ b/Q4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "535b7c39-3179-47f3-a69c-fb1442f1991f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "31b9f0d1-9eb3-49ab-9587-7ab15bad04ef",
    "metadata": {},
    "outputs": [],
@@ -196,6 +196,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "e34ce77f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Track number</th>\n",
+       "      <td>-0.102332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Acousticness</th>\n",
+       "      <td>-0.030678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Danceability</th>\n",
+       "      <td>0.162156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Energy</th>\n",
+       "      <td>-0.071712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Instrumentalness</th>\n",
+       "      <td>-0.186226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Liveness</th>\n",
+       "      <td>-0.252177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loudness</th>\n",
+       "      <td>0.199178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speechiness</th>\n",
+       "      <td>-0.213828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tempo</th>\n",
+       "      <td>-0.002854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Valence</th>\n",
+       "      <td>-0.048372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Duration (ms)</th>\n",
+       "      <td>-0.003045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  popularity\n",
+       "Track number       -0.102332\n",
+       "Acousticness       -0.030678\n",
+       "Danceability        0.162156\n",
+       "Energy             -0.071712\n",
+       "Instrumentalness   -0.186226\n",
+       "Liveness           -0.252177\n",
+       "Loudness            0.199178\n",
+       "Speechiness        -0.213828\n",
+       "Tempo              -0.002854\n",
+       "Valence            -0.048372\n",
+       "Duration (ms)      -0.003045"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_correlation_matrix(combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "68f015c2-fbe5-4bdc-a585-f58351923384",
    "metadata": {},
@@ -223,7 +326,8 @@
    ],
    "source": [
     "correlations_df = combine_correlation_matrices([beatles_df, rolling_stones_df, elton_john_df, metallica_df, taylor_swift_df, tame_impala_df, ed_sheeran_df], artists)\n",
-    "print_correlation_heatmap(correlations_df)"
+    "print_correlation_heatmap(correlations_df)\n",
+    "correlations_df.to_csv()"
    ]
   },
   {
